# wolframalpha

./: .flake8  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  LICENSE  NEWS.rst  README  README.rst  README.txt  conftest.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst
newsfragments/: +3f96dd7b.bugfix.rst  +d25a8d87.bugfix.rst  29.bugfix.rst  30.feature.rst
tests/: test_client.py
wolframalpha/: __init__.py  compat.py  pmxbot.py  test_client.py  test_pmxbot.py
