[metadata]
license_file = LICENSE
name = wolframalpha
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Wolfram|Alpha 2.0 API client
long_description = file:README.rst
url = https://github.com/jaraco/wolframalpha
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    xmltodict
    more_itertools
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
    # upstream
    pytest >= 3.5, !=3.7.3
    pytest-checkdocs >= 1.2.3
    pytest-flake8
    pytest-black-multipy
    pytest-cov

    # local
    pmxbot

docs =
    # upstream
    sphinx
    jaraco.packaging >= 3.2
    rst.linker >= 1.9

    # local

[options.entry_points]
pmxbot_handlers =
    Wolfram|Alpha = wolframalpha.pmxbot
